--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -34,15 +34,15 @@
 
 <StorageList xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- removable is not set in nosdcard product -->
-    
     <storage android:mountPoint="/mnt/external_sd"
     		 android:storageDescription="@string/storage_sd_card"
-    		 android:removable="true" />
+    		 android:primary="true"
+    		 android:removable="true"
+    		 android:allowMassStorage="true" />
     <storage android:mountPoint="/mnt/sdcard"
-    		 android:storageDescription="@string/storage_internal" 
-		 android:emulated="true"
-		 android:primary="true" />
-    <storage android:mountPoint="/mnt/usb_storage"
+    		 android:storageDescription="@string/storage_internal"
+    		 android:allowMassStorage="true" />
+    <storage android:mountPoint="/mnt/external_usb"
     		 android:storageDescription="@string/storage_usb"
     		 android:removable="true" />
 </StorageList>
