--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -31,18 +31,19 @@
 
       A storage should not have both emulated and removable set to true
 -->
-
 <StorageList xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- removable is not set in nosdcard product -->
+    <storage android:mountPoint="/mnt/sdcard"
+    		 android:storageDescription="@string/storage_internal"
+		 android:primary="false" 
+    		 android:allowMassStorage="true" />
     <storage android:mountPoint="/mnt/external_sd"
     		 android:storageDescription="@string/storage_sd_card"
     		 android:primary="true"
     		 android:removable="true"
     		 android:allowMassStorage="true" />
-    <storage android:mountPoint="/mnt/sdcard"
-    		 android:storageDescription="@string/storage_internal"
-    		 android:allowMassStorage="true" />
-    <storage android:mountPoint="/mnt/external_usb"
+    <storage android:mountPoint="/mnt/usb_storage"
     		 android:storageDescription="@string/storage_usb"
+		 android:primary="false"
     		 android:removable="true" />
 </StorageList>
